--- a/app/src/main/res/layout/fragment_admin_login_page.xml
+++ b/app/src/main/res/layout/fragment_admin_login_page.xml
@@ -10,16 +10,20 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageButton
-        android:id="@+id/back_button_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/uoft_blue"
-        android:contentDescription="return"
-        android:src="@drawable/abc_vector_test"
+    <Button
+        android:id="@+id/abackbt"
+        android:layout_width="54dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:drawableBottom="@drawable/arrow_left"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="100dp"
+        app:layout_constraintEnd_toStartOf="@+id/courseOffering"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -37,23 +41,24 @@
         android:layout_width="288.8dp"
         android:layout_height="59dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:gravity="center"
         android:paddingRight="15dp"
         android:text="Admin Login"
         android:textColor="@color/black"
         android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/admin_email_address_input"
         android:layout_width="288.8dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
@@ -61,15 +66,14 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/admin_password_input"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/admin_password_input"
         android:layout_width="288.8dp"
         android:layout_height="48dp"
         android:layout_marginBottom="200dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/white_rounded_edittext"
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
@@ -94,6 +98,18 @@
         app:backgroundTint="@color/white"
         app:cornerRadius="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin_password_input" />
+
+    <CheckBox
+        android:id="@+id/Arem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember me"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/admin_login_submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/admin_password_input" />
