--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/studentFrontPage">
+    app:startDestination="@id/adminCourseAdd">
 
     <fragment
         android:id="@+id/studentFrontPage"
         android:name="com.example.b07project.StudentFrontPage"
         android:label="student_front_page"
-        tools:layout="@layout/fragment_student_front_page" >
+        tools:layout="@layout/activity_main" >
         <action
             android:id="@+id/action_studentFrontPage_to_studentLoginPage"
             app:destination="@id/studentLoginPage" />
@@ -80,7 +80,7 @@
         android:id="@+id/adminCourseAdd"
         android:name="com.example.b07project.AdminCourseAdd"
         android:label="fragment_admin_course_add"
-        tools:layout="@layout/fragment_admin_course_add" >
+        tools:layout="@layout/admin_add_course" >
         <action
             android:id="@+id/action_adminCourseAdd_to_adminFrontPage"
             app:destination="@id/adminFrontPage" />
