--- a/app/src/main/res/layout/framgent_student_academic_history.xml
+++ b/app/src/main/res/layout/framgent_student_academic_history.xml
@@ -57,7 +57,7 @@
         android:id="@+id/toCourseView"
         android:layout_width="67dp"
         android:layout_height="71dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <ImageView
         android:id="@+id/imageView6"
