--- a/app/src/main/res/layout/activity_admin_course_view.xml
+++ b/app/src/main/res/layout/activity_admin_course_view.xml
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/courseCodes" />
 
         <Button
-            android:id="@+id/newbackbt"
+            android:id="@+id/adminViewBack"
             android:layout_width="54dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
